# ppptm

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: doctest.yml  pre-commit.yml  pytest.yml
demo/: americas.ipynb  global.ipynb
ppptm/: __init__.py  dist.py  initialize.py  model.py  node.py  optim.py  score.py
src/ppptm/: __about__.py  __init__.py  io.py  joint_model.py  marginals.py  model.py
src/ppptm/bspline/: __init__.py  util.py
src/ppptm/nodes/: kernel.py  ppvar.py  ppvar_rw.py
src/ppptm/util/: locs.py  summary.py
tests/: test_dist.py  test_initialize.py  test_marginals.py  test_model.py  test_node.py  test_score.py
tests/model/: test_model.py
tests/nodes/: test_kernel.py  test_ppvar.py  test_ppvar_rw.py
tests/notebooks/: test_americas_g.ipynb  test_data.ipynb  test_fit.ipynb  test_fit_model_gaussian.ipynb  test_fit_model_gaussian_ard.ipynb  test_fit_model_hg.ipynb  test_fit_model_hg_ard.ipynb  test_fit_model_hg_ard_lamp.ipynb  test_fit_model_obs.ipynb  test_model_h.ipynb  test_ppvar.ipynb  test_ppvar_rw.ipynb  test_prec_americas.ipynb  test_prec_americas_manual_loc_split.ipynb  test_prec_americas_predict_at_new_locs.ipynb  test_spatial_onion.ipynb
