[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ppptm"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Johannes Brachem", email = "jbrachem@posteo.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Johannes Brachem/ppptm#readme"
Issues = "https://github.com/Johannes Brachem/ppptm/issues"
Source = "https://github.com/Johannes Brachem/ppptm"

[tool.hatch.version]
path = "ppptm/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:ppptm tests}"

[tool.hatch.envs.hatch-test]
parallel = true

[tool.coverage.run]
source_pkgs = ["ppptm", "tests"]
branch = true
parallel = true
omit = [
  "ppptm/__about__.py",
]

[tool.coverage.paths]
ppptm = ["ppptm", "*/ppptm/ppptm"]
tests = ["tests", "*/ppptm/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
